clusters/cl01tl/manifests/jellyfin-testing/Deployment-jellyfin-testing.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin-testing
  labels:
    helm.sh/chart: jellyfin-testing-3.2.0
    app.kubernetes.io/name: jellyfin-testing
    app.kubernetes.io/instance: jellyfin-testing
    app.kubernetes.io/version: "10.11.8"
    app.kubernetes.io/managed-by: Helm
spec:
  strategy:
    type: RollingUpdate
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: jellyfin-testing
      app.kubernetes.io/instance: jellyfin-testing
  template:
    metadata:
      labels:
        helm.sh/chart: jellyfin-testing-3.2.0
        app.kubernetes.io/name: jellyfin-testing
        app.kubernetes.io/instance: jellyfin-testing
        app.kubernetes.io/version: "10.11.8"
        app.kubernetes.io/managed-by: Helm
    spec:
      serviceAccountName: jellyfin-testing
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
      containers:
        - name: jellyfin-testing
          securityContext: {}
          image: "ghcr.io/jellyfin/jellyfin:preview@sha256:669d234c776a37b331d875f58246434f80dbbbb619fa7edef55ce26d187baa2c"
          imagePullPolicy: IfNotPresent
          lifecycle:
            postStart:
              exec:
                command:
                  - /bin/sh
                  - -c
                  - |
                    [...]
          ports:
            - name: http
              containerPort: 8096
              protocol: TCP
          startupProbe:
            failureThreshold: 30
            initialDelaySeconds: 0
            periodSeconds: 10
            tcpSocket:
              port: http
          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 10
          resources:
            limits:
              gpu.intel.com/i915: 1
            requests:
              cpu: 100m
              gpu.intel.com/i915: 1
              memory: 100Mi
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /media
              name: media
              readOnly: false
            - mountPath: /cache
              name: cache
            - mountPath: /mnt/store
              name: media-nfs
              readOnly: true
            - mountPath: /mnt/youtube
              name: youtube-nfs
              readOnly: true
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: jellyfin-testing-config
        - name: media
          emptyDir: {}
        - name: cache
          emptyDir: {}
        - name: media-nfs
          persistentVolumeClaim:
            claimName: jellyfin-nfs-storage
        - name: youtube-nfs
          persistentVolumeClaim:
            claimName: jellyfin-youtube-nfs-storage
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app.kubernetes.io/name
                    operator: In
                    values:
                      - jellyfin
              topologyKey: kubernetes.io/hostname
