clusters/cl01tl/manifests/jellyfin-testing/Pod-jellyfin-testing-meilisearch-test-connection.yaml
apiVersion: v1
kind: Pod
metadata:
  name: jellyfin-testing-meilisearch-test-connection
  labels:
    app.kubernetes.io/name: meilisearch
    helm.sh/chart: meilisearch-0.37.0
    app.kubernetes.io/instance: jellyfin-testing
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": test-success
spec:
  containers:
    - name: wget
      image: busybox
      command: ['wget']
      args: ['--spider', '--timeout=5', 'jellyfin-testing-meilisearch:7700']
  restartPolicy: Never
