clusters/cl01tl/manifests/jellyfin-testing/StatefulSet-jellyfin-testing-meilisearch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: jellyfin-testing-meilisearch
  labels:
    helm.sh/chart: meilisearch-0.37.0
    app.kubernetes.io/name: meilisearch
    app.kubernetes.io/instance: jellyfin-testing
    app.kubernetes.io/version: "v1.52.3"
    app.kubernetes.io/component: search-engine
    app.kubernetes.io/part-of: meilisearch
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  serviceName: jellyfin-testing-meilisearch
  selector:
    matchLabels:
      app.kubernetes.io/name: meilisearch
      app.kubernetes.io/instance: jellyfin-testing
  template:
    metadata:
      labels:
        helm.sh/chart: meilisearch-0.37.0
        app.kubernetes.io/name: meilisearch
        app.kubernetes.io/instance: jellyfin-testing
        app.kubernetes.io/version: "v1.52.3"
        app.kubernetes.io/component: search-engine
        app.kubernetes.io/part-of: meilisearch
        app.kubernetes.io/managed-by: Helm
      annotations:
        checksum/config: f6a8de893f4ce2eb46d700084fb573ada7fbb782b7e4cce5cfe34b1b2c2b8824
    spec:
      serviceAccountName: jellyfin-testing-meilisearch
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
      volumes:
        - name: tmp
          emptyDir: {}
        - name: data
          persistentVolumeClaim:
            claimName: jellyfin-testing-meilisearch
      containers:
        - name: meilisearch
          image: "getmeili/meilisearch:v1.52.3"
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
          volumeMounts:
            - name: tmp
              mountPath: /tmp
            - name: data
              mountPath: /meili_data
          ports:
            - name: http
              containerPort: 7700
              protocol: TCP
          startupProbe:
            httpGet:
              path: /health
              port: http
            periodSeconds: 1
            initialDelaySeconds: 1
            failureThreshold: 60
            timeoutSeconds: 1
          livenessProbe:
            httpGet:
              path: /health
              port: http
            periodSeconds: 10
            initialDelaySeconds: 0
            timeoutSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: http
            periodSeconds: 10
            initialDelaySeconds: 0
            timeoutSeconds: 10
          resources:
            requests:
              cpu: 10m
              memory: 1000Mi
