clusters/cl01tl/manifests/jellyfin-testing/Service-jellyfin-testing-meilisearch.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin-testing-meilisearch
  labels:
    helm.sh/chart: meilisearch-0.38.0
    app.kubernetes.io/name: meilisearch
    app.kubernetes.io/instance: jellyfin-testing
    app.kubernetes.io/version: "v1.53.1"
    app.kubernetes.io/component: search-engine
    app.kubernetes.io/part-of: meilisearch
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 7700
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: meilisearch
    app.kubernetes.io/instance: jellyfin-testing
