clusters/cl01tl/manifests/jellyfin-testing/Service-jellyfin-testing.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin-testing
  labels:
    app.kubernetes.io/instance: jellyfin-testing
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: jellyfin-testing
    app.kubernetes.io/service: jellyfin-testing
    helm.sh/chart: jellyfin-testing-5.0.1
  namespace: jellyfin-testing
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8096
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/controller: main
    app.kubernetes.io/instance: jellyfin-testing
    app.kubernetes.io/name: jellyfin-testing
