clusters/cl01tl/manifests/jellyfin-testing/HTTPRoute-jellyfin-testing.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyfin-testing
  labels:
    helm.sh/chart: jellyfin-testing-3.2.0
    app.kubernetes.io/name: jellyfin-testing
    app.kubernetes.io/instance: jellyfin-testing
    app.kubernetes.io/version: "10.11.8"
    app.kubernetes.io/managed-by: Helm
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  hostnames:
    - jellyfin-testing.alexlebens.net
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: jellyfin-testing
          port: 8096
